WIP Game board model - Save tile ratios in properties file